--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/course_project
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=P
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.messages.basename=lang/messages
